Add more member info to new member email

--- a/webshop/src/templates/new_member_email.html
+++ b/webshop/src/templates/new_member_email.html
@@ -6,8 +6,10 @@
     </tr>
     <tr>
         <td>
-            <h2>Välkommen som ny medlem på Stockholm Makerspace!</h2>
+            <h2>Välkommen som ny medlem på Stockholm Makerspace {{member.firstname}}!</h2>
             <p>Vi hoppas kunna se dig på spacet snart!</p>
+            <h2>Din info</h2>
+            <p>Du är registrerad som {{member.firstname}} {{member.lastname}} med medlemsnummer <b>#{{member.member_number}}</b>.</p>
             <h2>Labaccess</h2>
             <p>Om du precis har köpt labaccess så måste du aktivera den genom att komma på en nyckelutlämning. När dessa sker står i <a href="https://www.makerspace.se/kalendarium">kalendariumet</a>.
             Vid nyckelutlämningen så kommer du att få en egen nyckel till spacet så att du kan komma och gå som du vill.</p>
