--- a/webshop/src/static/style.scss
+++ b/webshop/src/static/style.scss
@@ -133,8 +133,8 @@ $footer-height: 240px;
 		padding-right: 6px;
 
 		::-webkit-outer-spin-button, ::-webkit-inner-spin-button {
-		    -webkit-appearance: none;
-		    margin: 0;
+			-webkit-appearance: none;
+			margin: 0;
 		}
 
 		-moz-appearance: textfield;
@@ -258,6 +258,15 @@ $footer-height: 240px;
 	height: $footer-height;
 }
 
+
+#pay-module.non-empty {
+	border-color: #7C7;
+
+	#pay-module-open-button {
+		background: #7C7;
+	}
+}
+
 #pay-module {
 	position: fixed;
 	bottom: 0px;
@@ -267,12 +276,32 @@ $footer-height: 240px;
 	max-height: 40%;
 	height: 0px;
 	transition: height 0.6s;
-	border-top: 6px solid #7C7;
+	border-top: 6px solid #a1a1a1;
 	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
 
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+
+	#pay-module-open-button {
+		width: 320px;
+		height: 30px;
+		top: -46px;
+		font-size: 16pt;
+		padding-top: 12px;
+		background: #a1a1a1;
+		position: absolute;
+		border-radius: 15px 15px 0px 0px;
+		text-align: center;
+		color: white;
+
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+	}
 
 	#cart {
 		list-style: none;
@@ -281,6 +310,7 @@ $footer-height: 240px;
 		padding: 20px 20px 0px 20px;
 		margin-bottom: 0px;
 		flex: 0.5;
+		height: 200px; // To prevent scrollbars from appearing when showing/hiding the pay module
 	}
 
 	#pay-right {
