--- a/webshop/src/static/style.scss
+++ b/webshop/src/static/style.scss
@@ -442,7 +442,7 @@ $footer-height: 240px;
 		border-radius: 3px;
 	}
 
-	button#product-save {
+	button#product-save, button#product-cancel {
 		margin-top: 20px;
 		min-width: 120px;
 	}
