--- a/webshop/src/templates/product_edit.html
+++ b/webshop/src/templates/product_edit.html
@@ -61,10 +61,16 @@
                 </div>
                 <a href="#add-action-modal" class="uk-button uk-button-default" uk-toggle>Add action</a>
             </div>
-            <button id="product-save" class="uk-button uk-button-primary">
-                <div class="progress-spinner" uk-spinner></div>
-                <span>Save</span>
-            </button>
+            <div class="uk-form-controls">
+                <button id="product-cancel" class="uk-button uk-button-primary">
+                    <div class="progress-spinner" uk-spinner></div>
+                    <span>Cancel</span>
+                </button>
+                <button id="product-save" class="uk-button uk-button-primary">
+                    <div class="progress-spinner" uk-spinner></div>
+                    <span>Save</span>
+                </button>
+            </div>
         </form>
         <div id="add-action-modal" uk-modal>
             <div class="uk-modal-dialog">
