[webshop] Make sidebar follow as the page scrolls

--- a/webshop/src/static/style.scss
+++ b/webshop/src/static/style.scss
@@ -22,10 +22,13 @@ $footer-height: 240px;
 	width: 250px;
 	box-shadow: rgba(0,0,0,0.1) 0px 0px 10px 0px;
 	padding: 10px;
-	// background: #222;
-	// h2 {
-	// 	color: white;
-	// }
+
+	.sidebar-fixed-content {
+		width: 250px - 10px/2;
+		position: fixed;
+		top: 0px;
+		bottom: 0px;
+	}
 
 	// Required for the delete button to be placed on the same row as the category
 	li a {
