--- a/webshop/src/templates/receipt.html
+++ b/webshop/src/templates/receipt.html
@@ -8,18 +8,15 @@
         <link rel="stylesheet" href="{{ url('static/style.css') }}" />
         <script src='{{ url("static/uikit/js/uikit.min.js") }}'></script>
         <script src='{{ url("static/uikit/js/uikit-icons.min.js") }}'></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-              integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-              crossorigin="anonymous"></script>
         {% include 'meta.html' %}
         {% if transaction.status == "pending" %}
             <meta http-equiv="refresh" content="3">
         {% endif %}
     </head>
     <body>
-        <div id="receipt">
-            <div class="receipt-image">
-                <img src='{{ url("static/images/logo-transparent-500px-300x210.png") }}' />
+        <div id="single-page-content" class="receipt">
+            <div class="header-logo">
+                <a href="/shop"><img src='{{ url("static/images/logo-transparent-500px-300x210.png") }}' /></a>
             </div>
             {% if transaction.status == "failed" %}
                 <h1>Din betalning misslyckades</h1>
@@ -32,7 +29,7 @@
                     <div class="receipt-items">
                         {% for product, cartItem in cart %}
                             <div class="receipt-item">
-                                <span class="product-title">{{ product.name }}</span>
+                                <a class="product-title" href="/shop/product/{{ product.id }}">{{ product.name }}</a>
                                 <span class="receipt-item-count">{{ cartItem.count }} {{ product.unit }}</span>
                                 <span class="receipt-item-amount">{{ cartItem.amount }} {{ currency }}</span>
                             </div>
@@ -54,7 +51,7 @@
                     <p>Stockholm Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm</p>
                 </div>
             {% endif %}
-            <div class="receipt-buttons">
+            <div class="text-navigation-footer">
                 <a href='/member'>Medlemsvy</a>
                 <a href='{{ url("member/history") }}'>Köphistorik</a>
                 <a href='{{ url("") }}'>Webshop</a>
