--- a/webshop/src/templates/receipt.html
+++ b/webshop/src/templates/receipt.html
@@ -21,7 +21,7 @@
             {% if transaction.status == "failed" %}
                 <h1>Din betalning misslyckades</h1>
             {% elif transaction.status == "pending" %}
-                <h1>Din betalning har inte bekräftats ännu</h1>
+                <h1>Din betalning har inte bekräftats ännu. Var god vänta.</h1>
             {% elif transaction.status == "completed" %}
                 <h1>Tack för ditt köp!</h1>
                 <div class="history-item">
