--- a/webshop/src/scss/style.scss
+++ b/webshop/src/scss/style.scss
@@ -724,6 +724,18 @@ html, body {
 			}
 		}
 	}
+
+	.product-image {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+
+		img {
+			border-radius: 3px;
+			margin: 5px;
+			max-width: 100%;
+		}
+	}
 }
 
 .product-nav-buttons {
