Minor style tweaks for image upload

--- a/webshop/src/scss/style.scss
+++ b/webshop/src/scss/style.scss
@@ -423,6 +423,11 @@ html, body {
 		margin-top: 20px;
 		min-width: 120px;
 	}
+
+	.product-image img {
+		max-height: 100px;
+		margin-right: 5px;
+	}
 }
 
 
