--- a/webshop/src/scss/style.scss
+++ b/webshop/src/scss/style.scss
@@ -430,6 +430,10 @@ html, body {
 	}
 }
 
+// Temporary thing
+form input.readonly-input {
+	color: #333 !important;
+}
 
 .receipt-item {
 	display: flex;
@@ -802,4 +806,43 @@ html, body {
 	width: 100%;
 	padding: 20px;
 	font-size: 20pt;
+}
+
+// For membership page
+
+.member-key-box {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	display: flex;
+	align-items: center;
+}
+
+.member-key-icon {
+	padding: 5px;
+	color: white;
+	border-radius: 100px;
+	margin-right: 15px;
+	width: 21px;
+	height: 21px;
+	text-align: center;
+}
+
+.member-key-color-active {
+	background: #87c92b;
+}
+
+.member-key-color-warning {
+	background: #eca72f;
+}
+
+.member-key-tag {
+	min-width: 100px;
+}
+
+.member-key-color-inactive {
+	background: #c92b2b;
+}
+
+.member-key-status {
+	flex-grow: 1;
 }
