Update member-view link

--- a/webshop/src/templates/receipt.html
+++ b/webshop/src/templates/receipt.html
@@ -52,7 +52,7 @@
                 </div>
             {% endif %}
             <div class="text-navigation-footer">
-                <a href='/member'>Medlemsvy</a>
+                <a href='{{ url("member") }}'>Medlemsvy</a>
                 <a href='{{ url("member/history") }}'>Köphistorik</a>
                 <a href='{{ url("") }}'>Webshop</a>
             </div>
