--- a/webshop/src/templates/register.html
+++ b/webshop/src/templates/register.html
@@ -4,12 +4,12 @@
         <title>Bli medlem - Stockholm Makerspace</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{{ url('static/uikit/css/uikit.min.css') }}" />
-        <link rel="stylesheet" href="{{ url('static/style.css') }}" />
-        <script src='{{ url("static/uikit/js/uikit.min.js") }}'></script>
-        <script src='{{ url("static/uikit/js/uikit-icons.min.js") }}'></script>
+        <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
+        <link rel="stylesheet" href="{{ STATIC }}/style.css" />
+        <script src='{{ STATIC }}/uikit/js/uikit.min.js'></script>
+        <script src='{{ STATIC }}/uikit/js/uikit-icons.min.js'></script>
         <script src="https://js.stripe.com/v3/"></script>
-        <script src='{{ url("static/js/register.js") }}'></script>
+        <script src='{{ STATIC }}/js/register.js'></script>
         <script id="product-data", type="application/json">
             {{ product_json|safe }}
         </script>
@@ -18,7 +18,7 @@
     <body>
         <form class="product-edit-form uk-form-stacked uk-margin-xlarge-bottom">
             <div class="header-logo">
-                <img src='{{ url("static/images/logo-transparent-500px-300x210.png") }}' />
+                <img src='{{ STATIC }}/images/logo-transparent-500px-300x210.png' />
             </div>
             <h1>Bli medlem</h1>
             <div>
