--- a/webshop/src/templates/shop.html
+++ b/webshop/src/templates/shop.html
@@ -4,11 +4,11 @@
         <title>Makerspace Webshop</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{{ url('static/uikit/css/uikit.min.css') }}" />
-        <link rel="stylesheet" href="{{ url('static/style.css') }}" />
-        <script src='{{ url("static/uikit/js/uikit.min.js") }}'></script>
-        <script src='{{ url("static/uikit/js/uikit-icons.min.js") }}'></script>
-        <script src='{{ url("static/js/shop.js") }}'></script>
+        <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
+        <link rel="stylesheet" href="{{ STATIC }}/style.css" />
+        <script src='{{ STATIC }}/uikit/js/uikit.min.js'></script>
+        <script src='{{ STATIC }}/uikit/js/uikit-icons.min.js'></script>
+        <script src='{{ STATIC }}/js/shop.js'></script>
         <script id="product-data", type="application/json">
             {{ product_json|safe }}
         </script>
@@ -18,7 +18,7 @@
         <div id="root">
             <div id="left-sidebar">
                 <div class="sidebar-fixed-content">
-                    <img src='{{ url("static/images/logo-transparent-500px-300x210.png") }}' />
+                    <img src='{{ STATIC }}/images/logo-transparent-500px-300x210.png' />
                     <h3>Kategorier</h3>
                     <ul class="uk-nav uk-nav-default">
                         {% for cat in categories %}
