--- a/webshop/src/templates/cart.html
+++ b/webshop/src/templates/cart.html
@@ -4,12 +4,12 @@
         <title>Kundvagn - Makerspace Webshop</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{{ url('static/uikit/css/uikit.min.css') }}" />
-        <link rel="stylesheet" href="{{ url('static/style.css') }}" />
-        <script src='{{ url("static/uikit/js/uikit.min.js") }}'></script>
-        <script src='{{ url("static/uikit/js/uikit-icons.min.js") }}'></script>
+        <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
+        <link rel="stylesheet" href="{{ STATIC }}/style.css" />
+        <script src='{{ STATIC }}/uikit/js/uikit.min.js'></script>
+        <script src='{{ STATIC }}/uikit/js/uikit-icons.min.js'></script>
         <script src="https://js.stripe.com/v3/"></script>
-        <script src='{{ url("static/js/cartpage.js") }}'></script>
+        <script src='{{ STATIC }}/js/cartpage.js'></script>
         <script id="product-data", type="application/json">
             {{ product_json|safe }}
         </script>
@@ -18,7 +18,7 @@
     <body>
         <div id="single-page-content" class="cartpage">
             <div class="header-logo">
-                <a href="/shop"><img src='{{ url("static/images/logo-transparent-500px-300x210.png") }}' /></a>
+                <a href="/shop"><img src='{{ STATIC }}/images/logo-transparent-500px-300x210.png' /></a>
             </div>
             <ul id="cart">
             </ul>
