--- a/webshop/src/templates/history.html
+++ b/webshop/src/templates/history.html
@@ -4,11 +4,11 @@
         <title>Köphistorik - Makerspace Webshop</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{{ url('static/uikit/css/uikit.min.css') }}" />
-        <link rel="stylesheet" href="{{ url('static/style.css') }}" />
-        <script src='{{ url("static/uikit/js/uikit.min.js") }}'></script>
-        <script src='{{ url("static/uikit/js/uikit-icons.min.js") }}'></script>
-        <script src='{{ url("static/js/history.js") }}'></script>
+        <link rel="stylesheet" href="{{ STATIC }}/uikit/css/uikit.min.css" />
+        <link rel="stylesheet" href="{{ STATIC }}/style.css" />
+        <script src='{{ STATIC }}/uikit/js/uikit.min.js'></script>
+        <script src='{{ STATIC }}/uikit/js/uikit-icons.min.js'></script>
+        <script src='{{ STATIC }}/js/history.js'></script>
         {% include("meta.html") %}
     </head>
     <body>
