--- a/webshop/src/templates/meta.html
+++ b/webshop/src/templates/meta.html
@@ -1,4 +1,4 @@
-<link rel="icon" href="{{ url('static/favicon.png') }}" type="image/x-icon">
+<link rel="icon" href="{{ STATIC }}/favicon.png" type="image/x-icon">
 <script>
     window.stripeKey = "{{ meta.stripePublicKey }}";
     window.apiBasePath = "{{ meta.apiBasePath }}";
