--- a/webshop/src/templates/history.html
+++ b/webshop/src/templates/history.html
@@ -8,15 +8,15 @@
         <link rel="stylesheet" href="{{ STATIC }}/style.css" />
         <script src='{{ STATIC }}/uikit/js/uikit.min.js'></script>
         <script src='{{ STATIC }}/uikit/js/uikit-icons.min.js'></script>
-        <script src='{{ STATIC }}/js/history.js'></script>
         {% include("meta.html") %}
+        <script src='{{ STATIC }}/js/history.js'></script>
     </head>
     <body>
         <div id="purchase-history">
             <h1>Köphistorik</h1>
             <div class="receipt-buttons">
                 <a href='/member'><span uk-icon="user"></span> Medlemsvy</a>
-                <a href='{{ url("") }}'><span uk-icon="cart"></span> Webshop</a>
+                <a href=''><span uk-icon="cart"></span> Webshop</a>
             </div>
             <h2 id="member-header"></h2>
             <div id="history-contents">
