Fixed history bug.

--- a/webshop/src/templates/history.html
+++ b/webshop/src/templates/history.html
@@ -16,7 +16,7 @@
             <h1>Köphistorik</h1>
             <div class="receipt-buttons">
                 <a href='/member'><span uk-icon="user"></span> Medlemsvy</a>
-                <a href=''><span uk-icon="cart"></span> Webshop</a>
+                <a href='{{ url("") }}'><span uk-icon="cart"></span> Webshop</a>
             </div>
             <h2 id="member-header"></h2>
             <div id="history-contents">
