--- a/webshop/src/templates/receipt.html
+++ b/webshop/src/templates/receipt.html
@@ -9,48 +9,17 @@
         <script src='{{ STATIC }}/uikit/js/uikit.min.js'></script>
         <script src='{{ STATIC }}/uikit/js/uikit-icons.min.js'></script>
         {% include 'meta.html' %}
-        {% if transaction.status == "pending" %}
-            <meta http-equiv="refresh" content="3">
-        {% endif %}
+        <script>
+            window.transactionId = {{ transaction_id }};
+        </script>
+        <script src='{{ STATIC }}/js/receipt.js'></script>
     </head>
     <body>
         <div id="single-page-content" class="receipt">
             <div class="header-logo">
                 <a href="/shop"><img src='{{ STATIC }}/images/logo-transparent-500px-300x210.png' /></a>
             </div>
-            {% if transaction.status == "failed" %}
-                <h1>Din betalning misslyckades</h1>
-            {% elif transaction.status == "pending" %}
-                <h1>Din betalning har inte bekräftats ännu. Var god vänta.</h1>
-            {% elif transaction.status == "completed" %}
-                <h1>Tack för ditt köp!</h1>
-                <div class="history-item history-item-{{transaction.status}}">
-                    <h3><a href="/shop/receipt/{{transaction.id}}">{{ transaction.created_at|format_datetime }}</a><span class="receipt-id">Kvitto {{ transaction.id }}</span></h3>
-                    <div class="receipt-items">
-                        {% for product, cartItem in cart %}
-                            <div class="receipt-item">
-                                <a class="product-title" href="/shop/product/{{ product.id }}">{{ product.name }}</a>
-                                <span class="receipt-item-count">{{ cartItem.count }} {{ product.unit }}</span>
-                                <span class="receipt-item-amount">{{ cartItem.amount }} {{ currency }}</span>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <div class="receipt-amount">
-                        <span>Summa</span>
-                        <span class="receipt-amount-value">{{ transaction.amount }} {{ currency }}</span>
-                    </div>
-                    <div class="receipt-items">
-                        <div class="receipt-item">
-                            <span class="product-title">Medlem</span>
-                            <span class="receipt-item-amount" style="min-width: 200px;">{{ member.firstname }} {{ member.lastname }} #{{ member.member_number }}</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="receipt-message">
-                    <p>Ett kvitto har också skickats via email.</p>
-                    <p>Stockholm Makerspace - Drottning Kristinas väg 53, 114 28 Stockholm</p>
-                </div>
-            {% endif %}
+            <div id="receipt-content"></div>
             <div class="text-navigation-footer">
                 <a href='{{ url("member") }}'>Medlemsvy</a>
                 <a href='{{ url("member/history") }}'>Köphistorik</a>
